# aiil_lab_25

config/: bashrc  computers.cfg  repos.cfg  robots.cfg  software.cfg  wireless.cfg
config/dds/: rmit-cyclone-dds.xml  rmit-fastrtps-dds.xml
config/rosbot/: 01-network-manager-all.yaml  husarion-default.yaml
docker/: Dockerfile.humble  README
docker/local/: compose.yaml
docker/rosbot/: compose-common.yaml  compose-pro2.yaml  compose-pro3-docker.yaml  compose.vnc.yaml
docker/vxlab/: Dockerfile-arm64.melodic  Dockerfile.noetic  build-melodic  build-melodic-arm64  cdi-proxy  docker-compose-arm64.yml  docker-compose.yml  guest-runner
explore/config/: params.yaml
humble_workspace/src/aiil_gazebo/: package.xml  setup.cfg  setup.py
humble_workspace/src/aiil_gazebo/config/: explore.yaml  navigation.yaml  slam.yaml
humble_workspace/src/aiil_gazebo/launch/: empty_world.launch.py  explore.launch.py  nav.launch.py  slam.launch.py
humble_workspace/src/aiil_gazebo/worlds/: hazards.sdf  maze.sdf  oldhazards.world
humble_workspace/src/aiil_oakd/config/: oakd-orig.yaml  oakd.yaml
humble_workspace/src/aiil_oakd/launch/: camera.launch.py
humble_workspace/src/aiil_rosbot_demo/: package.xml  setup.cfg  setup.py
humble_workspace/src/aiil_rosbot_demo/aiil_rosbot_demo/: cmd_vel.py  goToPose.py  nav2_example.py  pid.py  publish_hazard.py  publish_hazards_test.py  publish_navpath.py  start_on_marker.py  transform.py  waypoint.py
humble_workspace/src/aiil_rosbot_demo/config/: aiil_simple_navigate.xml  amcl.yaml  explore.yaml  hazard_config.yaml  navigation_pro2.yaml  (+2 more)
(+41 files in other folders)
