<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aiil_gazebo</name>
  <version>0.0.0</version>
  <description>The aiil_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="timothy.wiley@rmit.edu.au">AI Innovation Lab, RMIT University</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>RMIT IP - Not for public release</license>

  <export>
    <build_type>ament_python</build_type>

    <depend>aiil_rosbot_demo</depend>
    <depend>urdf</depend>
    <depend>xacro</depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    
  </export>

</package>
